# specialMatrix

./: .gitignore  CMakeLists.txt  README.md  bindings.cpp  main.cpp  specialMatrix.cpp  specialMatrix.hpp  utils.cpp  utils.hpp
test/: demo.py  pyvenv.cfg  requirements.txt  test.py  test2.py
